--- a/LP5/requirements.txt
+++ b/LP5/requirements.txt
@@ -1,24 +1,84 @@
-imageio==2.28.1
-lazy_loader==0.2
-networkx==3.1
+absl-py==1.4.0
+appnope==0.1.3
+asttokens==2.2.1
+astunparse==1.6.3
+backcall==0.2.0
+cachetools==5.3.0
+certifi==2023.5.7
+charset-normalizer==3.1.0
+comm==0.1.3
+contourpy==1.0.7
+cycler==0.11.0
+debugpy==1.6.7
+decorator==5.1.1
+executing==1.2.0
+flatbuffers==23.5.9
+fonttools==4.39.4
+gast==0.4.0
+google-auth==2.18.0
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+grpcio==1.54.2
+h5py==3.8.0
+idna==3.4
+ipykernel==6.23.1
+ipython==8.13.2
+jedi==0.18.2
+joblib==1.2.0
+jupyter_client==8.2.0
+jupyter_core==5.3.0
+keras==2.13.1rc0
+kiwisolver==1.4.4
+libclang==16.0.0
+Markdown==3.4.3
+MarkupSafe==2.1.2
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
+nest-asyncio==1.5.6
 numpy==1.24.3
+oauthlib==3.2.2
+opencv-python==4.7.0.72
+opt-einsum==3.3.0
 packaging==23.1
 pandas==2.0.1
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==9.5.0
-protobuf==4.21.12
-PyQt3D==5.15.5
-PyQt5==5.15.7
-PyQt5-sip==12.11.0
-PyQtChart==5.15.6
-PyQtDataVisualization==5.15.5
-PyQtNetworkAuth==5.15.5
-PyQtPurchasing==5.15.5
-PyQtWebEngine==5.15.6
+platformdirs==3.5.1
+prompt-toolkit==3.0.38
+protobuf==4.23.0
+psutil==5.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+Pygments==2.15.1
+pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2023.3
-PyWavelets==1.4.1
-scikit-image==0.20.0
+pyzmq==25.0.2
+requests==2.30.0
+requests-oauthlib==1.3.1
+rsa==4.9
+scikit-learn==1.2.2
 scipy==1.10.1
+seaborn==0.12.2
 six==1.16.0
-tifffile==2023.4.12
+stack-data==0.6.2
+tensorboard==2.13.0
+tensorboard-data-server==0.7.0
+tensorflow==2.13.0rc0
+tensorflow-estimator==2.13.0rc0
+tensorflow-macos==2.13.0rc0
+termcolor==2.3.0
+threadpoolctl==3.1.0
+tornado==6.3.2
+traitlets==5.9.0
+typing_extensions==4.5.0
 tzdata==2023.3
+urllib3==1.26.15
+wcwidth==0.2.6
+Werkzeug==2.3.4
+wrapt==1.14.1
+yellowbrick==1.5
